improving few thing: align the board, randomize the board and fixing the victory at the easy level

--- a/css/style.css
+++ b/css/style.css
@@ -28,10 +28,7 @@ h1{
 .game-board {
     height: 300px;
     width: 300px;
-    margin-left: 470px;
-    margin: top 60px;
-
-
+    margin: 20px auto;
 }
 
 .mineBoard {
